@@ -19,17 +19,17 @@ import static edu.colorado.phet.fluidpressureandflow.pressure.view.WaterColor.ge
  * @author Sam Reid
  */
 public class FlowingWaterNode extends PNode {
-    public FlowingWaterNode( final TrapezoidPool pool, final Property<Double> flowRatePercentage, final ModelViewTransform transform, final ObservableProperty<Double> liquidDensity ) {
+    public FlowingWaterNode( final TrapezoidPool pool, final Property<Double> flowRatePercentage, final ModelViewTransform transform, final ObservableProperty<Double> liquidDensity, final ObservableProperty<Boolean> faucetEnabled ) {
         final double distanceToStickUpAboveTheGroundToGoBehindFaucet = 0.5;
         addChild( new PhetPPath( getBottomColor( liquidDensity.get() ) ) {{
             new RichSimpleObserver() {
                 @Override public void update() {
-                    double width = 0.6 * flowRatePercentage.get();//meters wide of the fluid flow
+                    double width = 0.6 * flowRatePercentage.get() * ( faucetEnabled.get() ? 1 : 0 );//meters wide of the fluid flow
                     final Rectangle2D.Double shape = new Rectangle2D.Double( pool.centerAtLeftChamberOpening - width / 2, -pool.height + pool.getWaterHeight(), width, pool.height + distanceToStickUpAboveTheGroundToGoBehindFaucet - pool.getWaterHeight() );
                     setPathTo( transform.modelToView( shape ) );
                     setPaint( getBottomColor( liquidDensity.get() ) );
                 }
-            }.observe( flowRatePercentage, pool.waterVolume, liquidDensity );
+            }.observe( flowRatePercentage, pool.waterVolume, liquidDensity, faucetEnabled );
         }} );
     }
 }
