@@ -1,5 +1,6 @@
-Pressure tab: Update faucet fluid color based on the density of the fluid
-Pressure tab: Made scene radio buttons non-square
+Pressure tab: Trapezoid scene: Fixed: Water comes out of faucet even when pool is full
+Pressure tab: Trapezoid scene: Update faucet fluid color based on the density of the fluid
+Pressure tab: Trapezoid scene: Made scene radio buttons non-square
 Pressure tab: Trapezoid scene: Fill pool when water flows
 Pressure tab: Added water flowing from the faucet as a solid rectangle
 Pressure tab: Removed background from radio button strip
